--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kartik3yaS.github.io/portfolio-website",
+  "homepage": "https://kartik3yaS.github.io/portfolio-web",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
